Modify products list in shop view
This commit modifies the products list in the shop view.
The products list now uses a table view instead of a scroll view.
Only products that are in stock will be shown.
Initial product image assets are added.

Signed-off-by: AnthonyAmanse <ghieamanse@gmail.com>

--- a/secretmap/Base.lproj/Main.storyboard
+++ b/secretmap/Base.lproj/Main.storyboard
@@ -20,6 +20,7 @@
         </array>
         <array key="HelveticaNeueLights.ttc">
             <string>HelveticaNeue-Light</string>
+            <string>HelveticaNeue-UltraLight</string>
         </array>
     </customFonts>
     <scenes>
@@ -407,76 +408,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kU7-Fy-sXm">
-                                <rect key="frame" x="67.5" y="170" width="240" height="327"/>
-                                <subviews>
-                                    <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vUI-u1-rRB">
-                                        <rect key="frame" x="0.0" y="0.0" width="240" height="100"/>
-                                        <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="boy pirate" translatesAutoresizingMaskIntoConstraints="NO" id="Cp9-7Q-8r7">
-                                                <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="100" id="QAF-2i-XQM"/>
-                                                    <constraint firstAttribute="height" constant="100" id="bR5-uv-rTS"/>
-                                                </constraints>
-                                            </imageView>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="fL5-Wl-cX0">
-                                                <rect key="frame" x="100" y="0.0" width="140" height="100"/>
-                                                <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w8p-7o-GZh">
-                                                        <rect key="frame" x="0.0" y="0.0" width="140" height="25"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" constant="25" id="sKp-ke-O3a"/>
-                                                        </constraints>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                        <nil key="textColor"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="test" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZvT-nF-n5c">
-                                                        <rect key="frame" x="0.0" y="25" width="140" height="25"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" constant="25" id="z4i-B1-44m"/>
-                                                        </constraints>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                        <nil key="textColor"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1234" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VMY-8X-RL8">
-                                                        <rect key="frame" x="0.0" y="50" width="140" height="25"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" constant="25" id="XI5-KF-iUz"/>
-                                                        </constraints>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                        <nil key="textColor"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qLC-Ss-3G5">
-                                                        <rect key="frame" x="0.0" y="75" width="140" height="25"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" constant="25" id="Eht-sP-vgm"/>
-                                                        </constraints>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                        <nil key="textColor"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
-                                                </subviews>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="100" id="RA4-1Z-EUW"/>
-                                                </constraints>
-                                            </stackView>
-                                        </subviews>
-                                    </stackView>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="327" id="QSw-tD-swL"/>
-                                    <constraint firstItem="vUI-u1-rRB" firstAttribute="width" secondItem="kU7-Fy-sXm" secondAttribute="width" id="UMa-2V-Jrf"/>
-                                    <constraint firstAttribute="bottom" secondItem="vUI-u1-rRB" secondAttribute="bottom" constant="227" id="X3Z-ED-3n9"/>
-                                    <constraint firstItem="vUI-u1-rRB" firstAttribute="top" secondItem="kU7-Fy-sXm" secondAttribute="top" id="Y16-F0-Vbw"/>
-                                    <constraint firstItem="vUI-u1-rRB" firstAttribute="leading" secondItem="kU7-Fy-sXm" secondAttribute="leading" id="kBa-Lf-mFz"/>
-                                    <constraint firstAttribute="width" constant="240" id="nGB-OJ-8sV"/>
-                                    <constraint firstAttribute="trailing" secondItem="vUI-u1-rRB" secondAttribute="trailing" id="sa8-K5-YdL"/>
-                                </constraints>
-                            </scrollView>
                             <navigationBar contentMode="scaleToFill" ambiguous="YES" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bQ1-MA-B9v">
                                 <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                 <color key="backgroundColor" red="0.90980392160000001" green="0.5450980392" blue="0.48627450979999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -520,6 +451,55 @@
                                 <color key="textColor" red="0.84313725490000002" green="0.17254901959999999" blue="0.39607843139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="t6K-Ew-di6">
+                                <rect key="frame" x="47" y="133" width="280" height="400"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="100" id="703-0j-XeP" customClass="ProductTableViewCell" customModule="secretmap" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="280" height="100"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="703-0j-XeP" id="FpF-OA-PPQ">
+                                            <rect key="frame" x="0.0" y="0.0" width="280" height="99.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="C7Y-Sw-mBV">
+                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="2 fitcoins each" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bnv-xc-Sea">
+                                                    <rect key="frame" x="108" y="39" width="157" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                                    <color key="textColor" red="0.85098039219999999" green="0.17254901959999999" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="987 left" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pvp-AD-qBQ">
+                                                    <rect key="frame" x="108" y="68" width="157" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-UltraLight" family="Helvetica Neue" pointSize="17"/>
+                                                    <color key="textColor" red="0.85098039219999999" green="0.17254901959999999" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="product name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5CL-HY-krE">
+                                                    <rect key="frame" x="108" y="11" width="157" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                                                    <color key="textColor" red="0.85098039219999999" green="0.17254901959999999" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="myCellLabel" destination="5CL-HY-krE" id="7Vu-53-Kqp"/>
+                                            <outlet property="myView" destination="C7Y-Sw-mBV" id="iPo-nF-tgU"/>
+                                            <outlet property="priceLabel" destination="bnv-xc-Sea" id="HsO-bp-Xjv"/>
+                                            <outlet property="quantityLeftLabel" destination="Pvp-AD-qBQ" id="te9-3I-1um"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -529,8 +509,6 @@
                             <constraint firstItem="WjJ-q4-YSd" firstAttribute="bottom" secondItem="ao6-5B-0NZ" secondAttribute="bottom" constant="16" id="GMp-8J-19Z"/>
                             <constraint firstItem="WjJ-q4-YSd" firstAttribute="bottom" secondItem="ZBO-6Q-DZP" secondAttribute="bottom" constant="16" id="IFl-TX-042"/>
                             <constraint firstItem="bQ1-MA-B9v" firstAttribute="top" secondItem="WjJ-q4-YSd" secondAttribute="top" id="LDG-0G-FwW"/>
-                            <constraint firstItem="kU7-Fy-sXm" firstAttribute="centerX" secondItem="YBR-bN-EAc" secondAttribute="centerX" id="LZQ-Ky-pQu"/>
-                            <constraint firstItem="kU7-Fy-sXm" firstAttribute="centerY" secondItem="YBR-bN-EAc" secondAttribute="centerY" id="NSC-aW-IAw"/>
                             <constraint firstItem="ao6-5B-0NZ" firstAttribute="leading" secondItem="WjJ-q4-YSd" secondAttribute="leading" constant="16" id="Omn-ZX-hCz"/>
                             <constraint firstItem="ZBO-6Q-DZP" firstAttribute="top" secondItem="k8v-za-ImH" secondAttribute="bottom" id="dRt-pM-tBL"/>
                             <constraint firstItem="WjJ-q4-YSd" firstAttribute="trailing" secondItem="k8v-za-ImH" secondAttribute="trailing" constant="16" id="gdf-yk-sW4"/>
@@ -546,7 +524,7 @@
                         <outlet property="fitcoinsBalance" destination="CH7-AQ-nek" id="B2I-mR-geb"/>
                         <outlet property="ordersButton" destination="Ldd-2y-HtM" id="WTM-E1-4ub"/>
                         <outlet property="pendingChargesBalance" destination="k8v-za-ImH" id="vFc-jS-c8z"/>
-                        <outlet property="scrollView" destination="kU7-Fy-sXm" id="yYG-TX-xPg"/>
+                        <outlet property="tableView" destination="t6K-Ew-di6" id="BHT-1h-e7O"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Tmk-mU-3J0" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -808,6 +786,7 @@
                     <connections>
                         <outlet property="contractId" destination="MWX-a9-hlS" id="yHN-be-GuA"/>
                         <outlet property="contractState" destination="7jT-tz-d6n" id="Wau-cv-Cej"/>
+                        <outlet property="imageView" destination="3pu-Cc-zwx" id="sZ0-cy-OHn"/>
                         <outlet property="messageForState" destination="uml-4r-I4e" id="8iN-Rl-bXD"/>
                         <outlet property="productName" destination="7SD-OZ-Oqp" id="s4j-cl-X3Q"/>
                         <outlet property="quantity" destination="5zv-rn-6Ab" id="C0P-Ee-R1M"/>
