--- a/secretmap/Base.lproj/Main.storyboard
+++ b/secretmap/Base.lproj/Main.storyboard
@@ -46,6 +46,18 @@
                                     <outlet property="delegate" destination="9pv-A4-QxB" id="5yq-xq-UMK"/>
                                 </connections>
                             </mapView>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nP6-5w-ayp">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.90980392160000001" green="0.5450980392" blue="0.48627450979999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="barTintColor" red="0.16078431369999999" green="0.66666666669999997" blue="0.76078431369999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <textAttributes key="titleTextAttributes">
+                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </textAttributes>
+                                <items>
+                                    <navigationItem title="Think Academy" id="4eu-nV-1Nh"/>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -405,6 +417,18 @@
                                     <action selector="refreshFitcoins:" destination="zKh-1a-vyv" eventType="primaryActionTriggered" id="AH3-yz-70W"/>
                                 </connections>
                             </button>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vxe-t0-6sn">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.90980392160000001" green="0.5450980392" blue="0.48627450979999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="barTintColor" red="0.16078431369999999" green="0.66666666669999997" blue="0.76078431369999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <textAttributes key="titleTextAttributes">
+                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </textAttributes>
+                                <items>
+                                    <navigationItem title="Footsteps" id="PXa-t6-GbR"/>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -893,13 +917,13 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" horizontalHuggingPriority="200" verticalHuggingPriority="200" translatesAutoresizingMaskIntoConstraints="NO" id="Oiu-hr-yVA">
-                                        <rect key="frame" x="0.0" y="100" width="300" height="200"/>
+                                        <rect key="frame" x="0.0" y="100" width="300" height="150"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8rl-aB-WtY">
-                                                <rect key="frame" x="50" y="0.0" width="200" height="200"/>
+                                                <rect key="frame" x="60" y="-15" width="180" height="180"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="200" id="Olu-nK-oJI"/>
-                                                    <constraint firstAttribute="width" constant="200" id="pLS-HF-rCe"/>
+                                                    <constraint firstAttribute="height" constant="180" id="Olu-nK-oJI"/>
+                                                    <constraint firstAttribute="width" constant="180" id="pLS-HF-rCe"/>
                                                 </constraints>
                                             </imageView>
                                         </subviews>
@@ -911,7 +935,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1gQ-WY-CQZ">
-                                        <rect key="frame" x="0.0" y="300" width="300" height="50"/>
+                                        <rect key="frame" x="0.0" y="250" width="300" height="50"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Secret Map" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0da-IG-raE">
                                                 <rect key="frame" x="96" y="10" width="109.5" height="30"/>
@@ -931,7 +955,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FWE-b9-FuQ">
-                                        <rect key="frame" x="0.0" y="350" width="300" height="100"/>
+                                        <rect key="frame" x="0.0" y="300" width="300" height="100"/>
                                         <subviews>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="An IBM Code Experiment" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i3G-b5-np5">
                                                 <rect key="frame" x="50" y="0.0" width="200" height="100"/>
@@ -950,6 +974,30 @@
                                             <constraint firstItem="i3G-b5-np5" firstAttribute="centerY" secondItem="FWE-b9-FuQ" secondAttribute="centerY" id="2og-lq-ldF"/>
                                             <constraint firstItem="i3G-b5-np5" firstAttribute="centerX" secondItem="FWE-b9-FuQ" secondAttribute="centerX" id="MSS-jU-jpu"/>
                                             <constraint firstAttribute="height" constant="100" id="PR3-Xi-S3n"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vMr-WH-rLx">
+                                        <rect key="frame" x="0.0" y="400" width="300" height="50"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MaJ-lu-rHr">
+                                                <rect key="frame" x="70" y="11.5" width="160" height="27"/>
+                                                <color key="backgroundColor" red="0.85098039215686272" green="0.17254901960784313" blue="0.39215686274509803" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="160" id="ABZ-h3-Fw1"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="12"/>
+                                                <state key="normal" title="Learn more ...">
+                                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="openLink:" destination="afw-9l-4em" eventType="touchUpInside" id="57k-pd-Rma"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="MaJ-lu-rHr" firstAttribute="centerY" secondItem="vMr-WH-rLx" secondAttribute="centerY" id="SPV-Kx-O1O"/>
+                                            <constraint firstItem="MaJ-lu-rHr" firstAttribute="centerX" secondItem="vMr-WH-rLx" secondAttribute="centerX" id="cPU-2C-R3F"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -973,11 +1021,63 @@
                         <outlet property="subtextView" destination="0da-IG-raE" id="aUf-qW-MXN"/>
                         <outlet property="subtitleView" destination="w9t-Xm-Xnh" id="mej-Z7-E94"/>
                         <outlet property="view" destination="FtQ-AS-qUF" id="9A9-0a-0nY"/>
+                        <segue destination="PSp-hq-Un9" kind="show" identifier="webkitSegue" id="qF9-XA-rNb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6ae-rb-llf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1462" y="963"/>
+            <point key="canvasLocation" x="1461.5999999999999" y="962.96851574212906"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Exc-aO-SCa">
+            <objects>
+                <viewController id="PSp-hq-Un9" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="jXd-bX-thE">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kgQ-zI-hO0">
+                                <rect key="frame" x="0.0" y="-1" width="375" height="668"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                            <navigationBar contentMode="scaleToFill" ambiguous="YES" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T0H-YI-Xrj">
+                                <rect key="frame" x="0.0" y="-45" width="375" height="44"/>
+                                <color key="backgroundColor" red="0.90980392160000001" green="0.5450980392" blue="0.48627450979999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="barTintColor" red="0.16078431369999999" green="0.66666666669999997" blue="0.76078431369999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <textAttributes key="titleTextAttributes">
+                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </textAttributes>
+                                <items>
+                                    <navigationItem title="IBM Code Material" id="Yc5-BZ-AqL">
+                                        <barButtonItem key="leftBarButtonItem" title="Back" id="vC6-bQ-ncf">
+                                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <connections>
+                                                <action selector="back:" destination="8rJ-Kc-sve" id="Or5-aM-cs4"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="kgQ-zI-hO0" firstAttribute="leading" secondItem="c3A-5a-ftY" secondAttribute="leading" id="Muh-Aa-tu6"/>
+                            <constraint firstItem="kgQ-zI-hO0" firstAttribute="centerY" secondItem="jXd-bX-thE" secondAttribute="centerY" id="aql-wM-xBk"/>
+                            <constraint firstItem="kgQ-zI-hO0" firstAttribute="centerX" secondItem="jXd-bX-thE" secondAttribute="centerX" id="owa-hS-c6L"/>
+                            <constraint firstItem="c3A-5a-ftY" firstAttribute="trailing" secondItem="kgQ-zI-hO0" secondAttribute="trailing" id="t5o-T0-GBT"/>
+                            <constraint firstItem="c3A-5a-ftY" firstAttribute="bottom" secondItem="kgQ-zI-hO0" secondAttribute="bottom" id="wcr-hn-cyU"/>
+                            <constraint firstItem="kgQ-zI-hO0" firstAttribute="top" secondItem="T0H-YI-Xrj" secondAttribute="bottom" id="ygt-R9-zzm"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="c3A-5a-ftY"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Wcu-BR-uBg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2385" y="1729"/>
         </scene>
         <!--Orders View Controller-->
         <scene sceneID="kF3-OE-Nba">
